# pyproject-tmpl

./: .gitignore  README.md  main.py  main.spec  pyproject.toml
scripts/: build  setup
src/biz/: __init__.py
src/my_sdk/: __init__.py
tests/: math_test.py
